@@ -180,6 +180,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -206,8 +215,8 @@
         <bootstrap.version>3.3.4</bootstrap.version>
         <jquery.version>2.1.3</jquery.version>
         <compiler.plugin.version>3.2</compiler.plugin.version>
-        <source.version>1.8</source.version>
-        <target.version>1.8</target.version>
+        <source.version>17</source.version>
+        <target.version>17</target.version>
         <enforcer.plugin.version>1.3.1</enforcer.plugin.version>
         <deploy.plugin.version>2.8.2</deploy.plugin.version>
         <shade.plugin.version>2.2</shade.plugin.version>
